--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "three": "^0.143.0",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-sanity": "^0.12.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/three": "^0.143.0",
