--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage" : "https://kilca.github.io/Portfolio/",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
