--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
+# we don't need to commit the dist folder
+dist
+
 # Editor directories and files
 .idea
 .vscode
